base/src/test/resources/failure/patterns/issue187.aya.txt
In file $FILE:4:4 ->

  2 |  | zero | suc Nat
  3 | 
  4 | def add {a b : Nat} : Nat
          ^-^
  
Error: Unhandled case: {zero}, {zero}
Tycking interrupted due to error(s).
What are you doing?
